@@ -172,6 +172,9 @@
 #define LOCATE_NORMAL    0
 #define LOCATE_BOTH      1
 
+#define UPDATE_REF_FRAME 1
+#define RESET_REF_FRAME  2
+
 /* Forward declaration, used in track.h */
 struct images;
 
@@ -247,6 +250,7 @@ struct images {
 
 	unsigned char *ref;               /* The reference frame */
 	unsigned char *out;               /* Picture buffer for motion images */
+	int *ref_dyn;                    /* Dynamic objects to be excluded from reference frame */
 	unsigned char *image_virgin;      /* Last picture frame with no text or locate overlay */
 	struct image_data preview_image;  /* Picture buffer for best image when enables */
 	unsigned char *mask;              /* Buffer for the mask file */
@@ -320,6 +324,7 @@ struct context {
 	int postcap;		/* downcounter, frames left to to send post event */
 
 	int shots;
+	int detecting_motion;
 	struct tm *currenttime_tm;
 	struct tm *eventtime_tm;
 
