@@ -9,6 +9,8 @@ Features
      features rely on the pre_capture buffer behind the scenes. (Joerg Weber)
    * Improve debian package, create user/group motion and added --chuid motion to init script (Angel Carpintero).
    * Removed night_compensate feature. This functionality is covered by noise_tune. (Joerg Weber)
+   * Implemented a new reference frame algorithm to improve object recognition and location. (Joerg Weber)
+   * Improved smartmask feature: real moving objects don't trigger the mask anymore. (Joerg Weber)
 
 Bugfixes
    * Handle mjpeg decoding and fix color issue adding mjpegtools dependecy
